Update index.html with fixed image paths

--- a/index.html
+++ b/index.html
@@ -741,99 +741,101 @@
           </div>
         </div>
       </article>
- <!-- Xerjoff Alexandria II -->
-<article class="product-card"
-         data-id="xj-alex2"
-         data-category="hair mist"
-         data-brand="Xerjoff"
-         data-name="Alexandria II"
-         data-size="30 ML"
-         data-type="Oriental • Woody"
-         data-notes="Lavender • Apple • Cinnamon • Rosewood • Cedar • Sandalwood • Vanilla • Amber • Musk • Oud"
-         data-price="200$"
-         data-img="images/xerjoff-alexandria-II-30ml.jpg"
-         data-desc="A luxurious oriental-woody travel perfume with rich depth and elegant projection.">
-  <div class="product-inner">
-    <div class="product-image-wrap">
-      <img src="images\photo_2025-12-18_14-46-58.jpg" alt="Xerjoff Alexandria II">
-    </div>
-    <div class="product-overlay">
-      <h4 class="product-title">Xerjoff Alexandria II</h4>
-      <p class="product-meta">30 ML • Oriental • Woody</p>
-      <p class="product-notes">
-        <strong>Notes:</strong> Lavender • Apple • Cinnamon • Rosewood 
-      </p>
-      <p class="product-desc">
-        A luxurious oriental-woody travel perfume with refined sweetness and smooth oud, ideal for sophisticated evenings.
-      </p>
-      <p class="product-price">—</p>
-      <div class="product-actions card-actions">
-        <button type="button" class="btn add-to-cart" data-id="xj-alex2">Add to Cart</button>
-      </div>
-    </div>
-  </div>
-</article>
-<!-- KAILUNA Baby Powder -->
-<article class="product-card"
-         data-id="kailuna-baby"
-         data-category="hair mist"
-         data-brand="KAILUNA CO."
-         data-name="Baby Powder"
-         data-size="0.5 FL OZ"
-         data-type="Powdery • Floral"
-         data-notes="Baby Powder • Rose • Geranium • Musk"
-         data-price="18.99$"
-         data-img="images/kailuna-baby-powder.jpg"
-         data-desc="A comforting hair & body mist with soft powdery floral notes, perfect for everyday freshness.">
-  <div class="product-inner">
-    <div class="product-image-wrap">
-      <img src="images\81dKgG69jIL._SL1500_.jpg" alt="KAILUNA Baby Powder">
-    </div>
-    <div class="product-overlay">
-      <h4 class="product-title">KAILUNA Baby Powder</h4>
-      <p class="product-meta">0.5 FL OZ • Powdery • Floral</p>
-      <p class="product-notes"><strong>Notes:</strong> Baby Powder • Rose • Geranium • Musk</p>
-      <p class="product-desc">
-        A comforting hair & body mist with soft powdery floral notes, perfect for everyday freshness.
-      </p>
-      <p class="product-price">18.99$</p>
-      <div class="product-actions card-actions">
-        <button type="button" class="btn add-to-cart" data-id="kailuna-baby">Add to Cart</button>
-      </div>
-    </div>
-  </div>
-</article>
-<!-- Easywell Bellezza Elixir -->
-<article class="product-card"
-         data-id="easywell-bellezza"
-         data-category="hair mist"
-         data-brand="Easywell"
-         data-name="Bellezza Elixir Hair Perfume"
-         data-size="75 ML"
-         data-type="Citrus • Floral • Gourmand"
-         data-notes="Lemon • Marigold Blossom • Gourmand Accents"
-         data-price="26.00$"
-         data-img="images/easywell-bellezza-elixir.jpg"
-         data-desc="A festive hair perfume with airy shine and a blend of citrus and floral gourmand notes.">
-  <div class="product-inner">
-    <div class="product-image-wrap">
-      <img src="images\81GNmx93vmL._SL1500_.jpg" alt="Easywell Bellezza Elixir">
-    </div>
-    <div class="product-overlay">
-      <h4 class="product-title">Easywell Bellezza Elixir</h4>
-      <p class="product-meta">75 ML • Citrus • Floral • Gourmand</p>
-      <p class="product-notes"><strong>Notes:</strong> Lemon • Marigold Blossom • Gourmand Accents</p>
-      <p class="product-desc">
-        A festive hair perfume with airy shine and a blend of citrus and floral gourmand notes.
-      </p>
-      <p class="product-price">26.00$</p>
-      <div class="product-actions card-actions">
-        <button type="button" class="btn add-to-cart" data-id="easywell-bellezza">Add to Cart</button>
-      </div>
-    </div>
-  </div>
-</article>
 
+      <!-- Xerjoff Alexandria II -->
+      <article class="product-card"
+               data-id="xj-alex2"
+               data-category="hair mist"
+               data-brand="Xerjoff"
+               data-name="Alexandria II"
+               data-size="30 ML"
+               data-type="Oriental • Woody"
+               data-notes="Lavender • Apple • Cinnamon • Rosewood • Cedar • Sandalwood • Vanilla • Amber • Musk • Oud"
+               data-price="200$"
+               data-img="images/xerjoff-alexandria-II-30ml.jpg"
+               data-desc="A luxurious oriental-woody travel perfume with rich depth and elegant projection.">
+        <div class="product-inner">
+          <div class="product-image-wrap">
+            <img src="images/photo_2025-12-18_14-46-58.jpg" alt="Xerjoff Alexandria II">
+          </div>
+          <div class="product-overlay">
+            <h4 class="product-title">Xerjoff Alexandria II</h4>
+            <p class="product-meta">30 ML • Oriental • Woody</p>
+            <p class="product-notes">
+              <strong>Notes:</strong> Lavender • Apple • Cinnamon • Rosewood
+            </p>
+            <p class="product-desc">
+              A luxurious oriental-woody travel perfume with refined sweetness and smooth oud, ideal for sophisticated evenings.
+            </p>
+            <p class="product-price">—</p>
+            <div class="product-actions card-actions">
+              <button type="button" class="btn add-to-cart" data-id="xj-alex2">Add to Cart</button>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <!-- KAILUNA Baby Powder -->
+      <article class="product-card"
+               data-id="kailuna-baby"
+               data-category="hair mist"
+               data-brand="KAILUNA CO."
+               data-name="Baby Powder"
+               data-size="0.5 FL OZ"
+               data-type="Powdery • Floral"
+               data-notes="Baby Powder • Rose • Geranium • Musk"
+               data-price="18.99$"
+               data-img="images/kailuna-baby-powder.jpg"
+               data-desc="A comforting hair & body mist with soft powdery floral notes, perfect for everyday freshness.">
+        <div class="product-inner">
+          <div class="product-image-wrap">
+            <img src="images/81dKgG69jIL._SL1500_.jpg" alt="KAILUNA Baby Powder">
+          </div>
+          <div class="product-overlay">
+            <h4 class="product-title">KAILUNA Baby Powder</h4>
+            <p class="product-meta">0.5 FL OZ • Powdery • Floral</p>
+            <p class="product-notes"><strong>Notes:</strong> Baby Powder • Rose • Geranium • Musk</p>
+            <p class="product-desc">
+              A comforting hair & body mist with soft powdery floral notes, perfect for everyday freshness.
+            </p>
+            <p class="product-price">18.99$</p>
+            <div class="product-actions card-actions">
+              <button type="button" class="btn add-to-cart" data-id="kailuna-baby">Add to Cart</button>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <!-- Easywell Bellezza Elixir -->
+      <article class="product-card"
+               data-id="easywell-bellezza"
+               data-category="hair mist"
+               data-brand="Easywell"
+               data-name="Bellezza Elixir Hair Perfume"
+               data-size="75 ML"
+               data-type="Citrus • Floral • Gourmand"
+               data-notes="Lemon • Marigold Blossom • Gourmand Accents"
+               data-price="26.00$"
+               data-img="images/easywell-bellezza-elixir.jpg"
+               data-desc="A festive hair perfume with airy shine and a blend of citrus and floral gourmand notes.">
+        <div class="product-inner">
+          <div class="product-image-wrap">
+            <img src="images/81GNmx93vmL._SL1500_.jpg" alt="Easywell Bellezza Elixir">
+          </div>
+          <div class="product-overlay">
+            <h4 class="product-title">Easywell Bellezza Elixir</h4>
+            <p class="product-meta">75 ML • Citrus • Floral • Gourmand</p>
+            <p class="product-notes"><strong>Notes:</strong> Lemon • Marigold Blossom • Gourmand Accents</p>
+            <p class="product-desc">
+              A festive hair perfume with airy shine and a blend of citrus and floral gourmand notes.
+            </p>
+            <p class="product-price">26.00$</p>
+            <div class="product-actions card-actions">
+              <button type="button" class="btn add-to-cart" data-id="easywell-bellezza">Add to Cart</button>
+            </div>
+          </div>
+        </div>
+      </article>
 
     </div>
   </section>
