Fix image paths in index.html

--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
                data-type="Floral • Warm"
                data-notes="Lavender • Orange Blossom • Vanilla"
                data-price="116.90$"
-               data-img="images/51NMHzKO6XL._SL1000_.jpg"
+               data-img="images/51NMHzKO6XL_SL1000_.jpg"
                data-desc="A bold, sensual floral scent with warm amber notes, perfect for confident evenings.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/51NMHzKO6XL._SL1000_.jpg" alt="Good girls">
+            <img src="images/51NMHzKO6XL_SL1000_.jpg" alt="Good girls">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">Good girls</h4>
@@ -301,11 +301,11 @@
                data-type="Rose • Floral"
                data-notes="Rose • Patchouli • Musk"
                data-price="19.8$"
-               data-img="images/632b259b-a30f-499f-862a-ab3882e349b6.png"
+               data-img="images/61vseD3ozML_SL1500_.jpg"
                data-desc="A romantic rose-based fragrance with a soft and elegant trail.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/61vseD3ozML._SL1500_.jpg" alt="Velvet Rose">
+            <img src="images/61vseD3ozML_SL1500_.jpg" alt="Velvet Rose">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">Velvet Rose</h4>
@@ -331,11 +331,11 @@
                data-type="Fresh"
                data-notes="Marine • Citrus • Woods"
                data-price="120$"
-               data-img="images/c006be86-216b-4e5b-ba18-8378e73508a3.png"
+               data-img="images/45a76bdd-a8d2-4188-8f4a-9c3f5e0536f4.png"
                data-desc="A fresh and clean marine fragrance inspired by the ocean breeze.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/fd34f045-a2f8-40fb-812b-f403beae1bd7.png" alt="Deep Ocean">
+            <img src="images/45a76bdd-a8d2-4188-8f4a-9c3f5e0536f4.png" alt="Deep Ocean">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">Deep Ocean</h4>
@@ -361,11 +361,11 @@
                data-type="Fresh • Clean"
                data-notes="Citrus • Green • Musk"
                data-price="17,48$"
-               data-img="images/c23ab26b-3bc9-4b1d-a10d-7e17ef21f1e2.png"
+               data-img="images/61vseD3ozML_SL1500_.jpg"
                data-desc="A clean, energetic scent ideal for daytime and casual wear.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/45a76bdd-a8d2-4188-8f4a-9c3f5e0536f4.png" alt="Pure Fresh">
+            <img src="images/61vseD3ozML_SL1500_.jpg" alt="Pure Fresh">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">Pure Fresh</h4>
@@ -391,7 +391,7 @@
                data-type="Oriental"
                data-notes="Oud • Saffron • Smoke"
                data-price="150$"
-               data-img="images/92ad94fb-9d77-4a9b-90e0-208a5cdafe12.png"
+               data-img="images/542ac4e1-2e52-47f1-afd5-7e13c9d6741d.png"
                data-desc="A rich oriental oud fragrance with deep smoky and spicy notes.">
         <div class="product-inner">
           <div class="product-image-wrap">
@@ -421,11 +421,11 @@
                data-type="Oriental Vanilla"
                data-notes="Vanilla • Brown Sugar • Amber"
                data-price="118$"
-               data-img="images/vanilla28.png"
+               data-img="images/31WTS0xLKELjpg"
                data-desc="A warm sweet vanilla fragrance with amber and brown sugar notes.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/31WTS0xLKEL.jpg" alt="KAYALI Vanilla 28">
+            <img src="images/31WTS0xLKELjpg" alt="KAYALI Vanilla 28">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">KAYALI Vanilla 28</h4>
@@ -451,7 +451,7 @@
                data-type="Floral Amber"
                data-notes="Neroli • Amber • White Musk"
                data-price="160$"
-               data-img="images/paradoxe.png"
+               data-img="images/prada.png"
                data-desc="A modern floral-amber fragrance with soft musk and fresh neroli.">
         <div class="product-inner">
           <div class="product-image-wrap">
@@ -481,11 +481,11 @@
                data-type="Fresh Aromatic"
                data-notes="Lavender • Mint • Ambrette"
                data-price="110$"
-               data-img="images/lunarossa.png"
+               data-img="images/prada for men_jpg"
                data-desc="A fresh aromatic men's fragrance with clean lavender, cool mint, and smooth ambrette.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/prada for men_.jpg" alt="Prada Luna Rossa">
+            <img src="images/prada for men_jpg" alt="Prada Luna Rossa">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">Prada Luna Rossa</h4>
@@ -511,11 +511,11 @@
                data-type="Oriental Floral"
                data-notes="Truffle • Black Orchid • Patchouli • Vanilla"
                data-price="180$"
-               data-img="images/black-orchid.png"
+               data-img="images/black orced_jpg"
                data-desc="A rich luxurious unisex fragrance with dark floral notes, earthy patchouli, and warm vanilla.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/black orced_.jpg" alt="Tom Ford Black Orchid">
+            <img src="images/black orced_jpg" alt="Tom Ford Black Orchid">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">Tom Ford Black Orchid</h4>
@@ -541,7 +541,7 @@
                data-type="Fresh Spicy"
                data-notes="Bergamot • Pepper • Ambroxan"
                data-price="150$"
-               data-img="images/sauvage.png"
+               data-img="images/sauvage.jpg"
                data-desc="A fresh spicy men's fragrance with bright bergamot, sharp pepper, and strong ambroxan.">
         <div class="product-inner">
           <div class="product-image-wrap">
@@ -571,7 +571,7 @@
                data-type="Warm Spicy"
                data-notes="Chestnut • Vanilla • Sage"
                data-price="120$"
-               data-img="images/stronger-with-you.png"
+               data-img="images/you man.png"
                data-desc="A warm sweet masculine fragrance with chestnut, vanilla, and aromatic sage.">
         <div class="product-inner">
           <div class="product-image-wrap">
@@ -601,11 +601,11 @@
                data-type="Woody Aromatic"
                data-notes="Apple • Patchouli • Lavender • Sandalwood"
                data-price="110$"
-               data-img="images/boss-infinite.png"
+               data-img="images/61CHpDxSOiL_SL1500_.jpg"
                data-desc="A woody aromatic men's fragrance with fresh apple, smooth sandalwood, calming lavender, and patchouli.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/61CHpDxSOiL._SL1500_.jpg" alt="Hugo Boss Bottled Infinite EDP">
+            <img src="images/61CHpDxSOiL_SL1500_.jpg" alt="Hugo Boss Bottled Infinite EDP">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">Hugo Boss</h4>
@@ -631,7 +631,7 @@
                data-type="Woody Floral"
                data-notes="Iris • Ambrette • Cedar"
                data-price="165$"
-               data-img="images/dior-homme-intense.png"
+               data-img="images/dior man.jpg"
                data-desc="A sophisticated woody-floral men’s fragrance with creamy iris, warm ambrette, and elegant cedar.">
         <div class="product-inner">
           <div class="product-image-wrap">
@@ -661,7 +661,7 @@
                data-type="Fresh Woody"
                data-notes="Orange • Sea Notes • Pepper • Tonka Bean"
                data-price="155$"
-               data-img="images/allure-homme-sport.png"
+               data-img="images/allure.jpg"
                data-desc="A fresh woody men's fragrance with bright citrus, marine notes, spicy pepper, and smooth tonka bean.">
         <div class="product-inner">
           <div class="product-image-wrap">
@@ -691,11 +691,11 @@
                data-type="Warm Spicy Gourmand"
                data-notes="Vanilla • Cinnamon • Coffee • Sweet Spices"
                data-price="45$"
-               data-img="images/khamrah-qahwa.png"
+               data-img="images/komra_jpg"
                data-desc="A warm gourmand unisex fragrance with rich coffee, creamy vanilla, cinnamon, and sweet spicy notes.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/komra_.jpg" alt="Lattafa Khamrah Qahwa">
+            <img src="images/komra_jpg" alt="Lattafa Khamrah Qahwa">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">Lattafa Khamrah Qahwa</h4>
@@ -721,7 +721,7 @@
                data-type="Floral Sweet"
                data-notes="Rose • Vanilla • White Musk • Jasmine"
                data-price="$60"
-               data-img="images/miss-laverne.png"
+               data-img="images/b4d1eab2-ba28-4779-9d62-7fc26f6bc166.png"
                data-desc="A soft sweet floral fragrance with elegant rose, creamy vanilla, jasmine, and white musk.">
         <div class="product-inner">
           <div class="product-image-wrap">
@@ -752,7 +752,7 @@
                data-type="Oriental • Woody"
                data-notes="Lavender • Apple • Cinnamon • Rosewood • Cedar • Sandalwood • Vanilla • Amber • Musk • Oud"
                data-price="200$"
-               data-img="images/xerjoff-alexandria-II-30ml.jpg"
+               data-img="images/photo_2025-12-18_14-46-58.jpg"
                data-desc="A luxurious oriental-woody travel perfume with rich depth and elegant projection.">
         <div class="product-inner">
           <div class="product-image-wrap">
@@ -785,11 +785,11 @@
                data-type="Powdery • Floral"
                data-notes="Baby Powder • Rose • Geranium • Musk"
                data-price="18.99$"
-               data-img="images/kailuna-baby-powder.jpg"
+               data-img="images/81dKgG69jL_SL1500_.jpg"
                data-desc="A comforting hair & body mist with soft powdery floral notes, perfect for everyday freshness.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/81dKgG69jIL._SL1500_.jpg" alt="KAILUNA Baby Powder">
+            <img src="images/81dKgG69jL_SL1500_.jpg" alt="KAILUNA Baby Powder">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">KAILUNA Baby Powder</h4>
@@ -816,11 +816,11 @@
                data-type="Citrus • Floral • Gourmand"
                data-notes="Lemon • Marigold Blossom • Gourmand Accents"
                data-price="26.00$"
-               data-img="images/easywell-bellezza-elixir.jpg"
+               data-img="images/81GNmx93vmL_SL1500_.jpg"
                data-desc="A festive hair perfume with airy shine and a blend of citrus and floral gourmand notes.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/81GNmx93vmL._SL1500_.jpg" alt="Easywell Bellezza Elixir">
+            <img src="images/81GNmx93vmL_SL1500_.jpg" alt="Easywell Bellezza Elixir">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">Easywell Bellezza Elixir</h4>
