Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
                data-type="Floral • Warm"
                data-notes="Lavender • Orange Blossom • Vanilla"
                data-price="116.90$"
-               data-img="images/51NMHzKO6XL_SL1000_.jpg"
+               data-img="images/51NMHzKO6XL._SL1000_.jpg"
                data-desc="A bold, sensual floral scent with warm amber notes, perfect for confident evenings.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/51NMHzKO6XL_SL1000_.jpg" alt="Good girls">
+            <img src="images/51NMHzKO6XL._SL1000_.jpg" alt="Good girls">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">Good girls</h4>
@@ -301,11 +301,11 @@
                data-type="Rose • Floral"
                data-notes="Rose • Patchouli • Musk"
                data-price="19.8$"
-               data-img="images/61vseD3ozML_SL1500_.jpg"
+               data-img="images/61vseD3ozML._SL1500_.jpg"
                data-desc="A romantic rose-based fragrance with a soft and elegant trail.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/61vseD3ozML_SL1500_.jpg" alt="Velvet Rose">
+            <img src="images/61vseD3ozML._SL1500_.jpg" alt="Velvet Rose">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">Velvet Rose</h4>
@@ -361,11 +361,11 @@
                data-type="Fresh • Clean"
                data-notes="Citrus • Green • Musk"
                data-price="17,48$"
-               data-img="images/61vseD3ozML_SL1500_.jpg"
+               data-img="images/61vseD3ozML._SL1500_.jpg"
                data-desc="A clean, energetic scent ideal for daytime and casual wear.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/61vseD3ozML_SL1500_.jpg" alt="Pure Fresh">
+            <img src="images/61vseD3ozML._SL1500_.jpg" alt="Pure Fresh">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">Pure Fresh</h4>
@@ -421,11 +421,11 @@
                data-type="Oriental Vanilla"
                data-notes="Vanilla • Brown Sugar • Amber"
                data-price="118$"
-               data-img="images/31WTS0xLKELjpg"
+               data-img="images/31WTS0xLKEL.jpg"
                data-desc="A warm sweet vanilla fragrance with amber and brown sugar notes.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/31WTS0xLKELjpg" alt="KAYALI Vanilla 28">
+            <img src="images/31WTS0xLKEL.jpg" alt="KAYALI Vanilla 28">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">KAYALI Vanilla 28</h4>
@@ -481,11 +481,11 @@
                data-type="Fresh Aromatic"
                data-notes="Lavender • Mint • Ambrette"
                data-price="110$"
-               data-img="images/prada for men_jpg"
+               data-img="images/prada for men_.jpg"
                data-desc="A fresh aromatic men's fragrance with clean lavender, cool mint, and smooth ambrette.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/prada for men_jpg" alt="Prada Luna Rossa">
+            <img src="images/prada for men_.jpg" alt="Prada Luna Rossa">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">Prada Luna Rossa</h4>
@@ -511,11 +511,11 @@
                data-type="Oriental Floral"
                data-notes="Truffle • Black Orchid • Patchouli • Vanilla"
                data-price="180$"
-               data-img="images/black orced_jpg"
+               data-img="images/black orced_.jpg"
                data-desc="A rich luxurious unisex fragrance with dark floral notes, earthy patchouli, and warm vanilla.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/black orced_jpg" alt="Tom Ford Black Orchid">
+            <img src="images/black orced_.jpg" alt="Tom Ford Black Orchid">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">Tom Ford Black Orchid</h4>
@@ -601,11 +601,11 @@
                data-type="Woody Aromatic"
                data-notes="Apple • Patchouli • Lavender • Sandalwood"
                data-price="110$"
-               data-img="images/61CHpDxSOiL_SL1500_.jpg"
+               data-img="images/61CHpDxSOiL._SL1500_.jpg"
                data-desc="A woody aromatic men's fragrance with fresh apple, smooth sandalwood, calming lavender, and patchouli.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/61CHpDxSOiL_SL1500_.jpg" alt="Hugo Boss Bottled Infinite EDP">
+            <img src="images/61CHpDxSOiL._SL1500_.jpg" alt="Hugo Boss Bottled Infinite EDP">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">Hugo Boss</h4>
@@ -691,11 +691,11 @@
                data-type="Warm Spicy Gourmand"
                data-notes="Vanilla • Cinnamon • Coffee • Sweet Spices"
                data-price="45$"
-               data-img="images/komra_jpg"
+               data-img="images/komra_.jpg"
                data-desc="A warm gourmand unisex fragrance with rich coffee, creamy vanilla, cinnamon, and sweet spicy notes.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/komra_jpg" alt="Lattafa Khamrah Qahwa">
+            <img src="images/komra_.jpg" alt="Lattafa Khamrah Qahwa">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">Lattafa Khamrah Qahwa</h4>
@@ -785,11 +785,11 @@
                data-type="Powdery • Floral"
                data-notes="Baby Powder • Rose • Geranium • Musk"
                data-price="18.99$"
-               data-img="images/81dKgG69jL_SL1500_.jpg"
+               data-img="images/81dKgG69jIL._SL1500_.jpg"
                data-desc="A comforting hair & body mist with soft powdery floral notes, perfect for everyday freshness.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/81dKgG69jL_SL1500_.jpg" alt="KAILUNA Baby Powder">
+            <img src="images/81dKgG69jIL._SL1500_.jpg" alt="KAILUNA Baby Powder">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">KAILUNA Baby Powder</h4>
@@ -816,11 +816,11 @@
                data-type="Citrus • Floral • Gourmand"
                data-notes="Lemon • Marigold Blossom • Gourmand Accents"
                data-price="26.00$"
-               data-img="images/81GNmx93vmL_SL1500_.jpg"
+               data-img="images/81GNmx93vmL._SL1500_.jpg"
                data-desc="A festive hair perfume with airy shine and a blend of citrus and floral gourmand notes.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/81GNmx93vmL_SL1500_.jpg" alt="Easywell Bellezza Elixir">
+            <img src="images/81GNmx93vmL._SL1500_.jpg" alt="Easywell Bellezza Elixir">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">Easywell Bellezza Elixir</h4>
