--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                data-desc="A clean, energetic scent ideal for daytime and casual wear.">
         <div class="product-inner">
           <div class="product-image-wrap">
-            <img src="images/61vseD3ozML._SL1500_.jpg" alt="Pure Fresh">
+            <img src="images/45a76bdd-a8d2-4188-8f4a-9c3f5e0536f4.png" alt="Pure Fresh">
           </div>
           <div class="product-overlay">
             <h4 class="product-title">Pure Fresh</h4>
@@ -888,6 +888,7 @@
   <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
