Update print statement to say 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h3>For Men & Women</h3>
 
       <div class="size">
-        <img src="perfumes/perfume.png" class="parfume-icon" alt="">
+        <img src="perfume.png" class="parfume-icon" alt="">
         <button>50 ML</button>
         <button class="active">100 ML</button>
         <button>150 ML</button>
@@ -888,6 +888,7 @@
   <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
