--- a/index.html
+++ b/index.html
@@ -42,35 +42,18 @@
       <h1>Luxury Perfumes</h1>
       <h3>For Men & Women</h3>
 
-      <div class="size">
-        <img src="perfume.png" class="parfume-icon" alt="">
-        <button>50 ML</button>
-        <button class="active">100 ML</button>
-        <button>150 ML</button>
-      </div>
+    <div class="size">
+  <img src="images/perfume.png" class="parfume-icon" alt="Perfume bottle">
+  <button>50 ML</button>
+  <button class="active">100 ML</button>
+  <button>150 ML</button>
+</div>
 
-      <button class="btn" type="button">$ 125 | ADD TO CART</button>
-
-      <div class="footer-bar">
-        <div class="footer-left">
-          <span class="current">01</span>
-          <span class="slash">/</span>
-          <span class="total">15</span>
-        </div>
-
-        <div class="footer-right">
-          <div class="favorites">
-            <i class="ri-heart-3-line"></i>
-          </div>
-          <div class="underline"></div>
-        </div>
-      </div>
-    </div>
-
-    <div class="header__image">
-      <img src="images/perfume.png" class="main-img" alt="">
-      <img src="images/flower.png" class="bg-img" alt="">
-    </div>
+<div class="header__image">
+  <img src="images/perfume.png" class="main-img" alt="Perfume main image">
+  <img src="images/flower.png" class="bg-img" alt="Flower background">
+</div>
+  
   </section>
 
   <!-- ===== WHY CHOOSE US ===== -->
@@ -888,6 +871,7 @@
   <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
