--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 
     <div class="header__image">
-      <img src="images/perfume.png" class="main-img" alt="">
+      <img src="perfume.png" class="main-img" alt="">
       <img src="images/flower.png" class="bg-img" alt="">
     </div>
   </section>
@@ -889,6 +889,7 @@
   <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
