--- a/cart.html
+++ b/cart.html
@@ -21,38 +21,40 @@
       }
 
       let html = `
-        <table border="1" cellpadding="8" cellspacing="0">
-          <tr>
-            <th>Product</th>
-            <th>Size</th>
-            <th>Qty</th>
-            <th>Price</th>
-            <th>Remove</th>
-          </tr>
+        <div class="cart-list" style="display:flex; flex-direction:column; gap:16px;">
       `;
 
       cart.forEach(item => {
         html += `
-          <tr>
-            <td>${item.name}</td>
-            <td>${item.size}</td>
-            <td>${item.qty}</td>
-            <td>${item.price}</td>
-            <td>
-              <button class="remove-btn" data-id="${item.id}">X</button>
-            </td>
-          </tr>
+          <div class="cart-item" style="display:flex; align-items:center; gap:16px; background:#fff; padding:12px 16px; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.08);">
+            ${item.img ? `
+              <img src="${item.img}" alt="${item.name}" style="width:70px; height:70px; object-fit:cover; border-radius:6px;">
+            ` : ''}
+            <div style="flex:1;">
+              <h3 style="margin:0 0 4px;">${item.name}</h3>
+              <p style="margin:0; font-size:14px; color:#666;">Size: ${item.size || '-'}</p>
+              <p style="margin:4px 0 0; font-weight:bold;">Price: ${item.price}</p>
+              <p style="margin:4px 0 0; font-size:14px;">Qty: ${item.qty}</p>
+            </div>
+            <button class="remove-btn" data-id="${item.id}" 
+              style="background:#ff4d4f; color:#fff; border:none; padding:6px 10px; border-radius:4px; cursor:pointer;">
+              Remove
+            </button>
+          </div>
         `;
       });
 
-      html += `</table>
+      html += `
+        </div>
         <br>
-        <button id="clear-cart">Clear All</button>
+        <button id="clear-cart" style="background:#000; color:#fff; border:none; padding:10px 16px; border-radius:6px; cursor:pointer;">
+          Clear All
+        </button>
       `;
 
       container.innerHTML = html;
 
-      // ربط أزرار الحذف
+      // زرار حذف عنصر واحد
       document.querySelectorAll('.remove-btn').forEach(btn => {
         btn.addEventListener('click', () => {
           const id = btn.dataset.id;
@@ -62,7 +64,7 @@
         });
       });
 
-      // زر حذف كل السلة
+      // زرار مسح السلة بالكامل
       document.getElementById('clear-cart').addEventListener('click', () => {
         if (confirm('Are you sure you want to clear the cart?')) {
           saveCart([]);
@@ -71,7 +73,7 @@
       });
     }
 
-    // أول مرة تحميل
+    // أول تحميل
     renderCart();
   </script>
 </body>
